<resources>
    <string name="app_name">Movies4U</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">Network error.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="top_rated">Top rated movies</string>
    <string name="upcoming">Upcoming movies</string>
    <string name="now_playing">Now playing movies</string>
    <string name="popular">Popular movies</string>
    <string name="movies_failure">Failed to fetch movies.</string>
    <string name="movies">Movies</string>
    <string name="movie_status">Status:</string>
    <string name="overview_label">Overview</string>
    <string name="info_label">Info</string>
    <string name="org_lang">Original Language</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="homepage">Homepage</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>

    <string-array name="movie_categories">
        <item>@string/top_rated</item>
        <item>@string/upcoming</item>
        <item>@string/now_playing</item>
        <item>@string/popular</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="bookmark">Bookmark</string>
    <string name="rate">Rate</string>
    <string name="please_login_msg">Please login in order to continue.</string>
    <string name="login_to_use_feature_msg">In order to use this feature, please login.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="title_activity_bookmarks">BookmarksActivity</string>
    <string name="bookmarked_movies_title">Bookmarked movies</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="logged_out">User logged out.</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for movies..</string>
    <string name="movie_bookmarked">Movie bookmarked.</string>
    <string name="movie_remove_from_bookmarks">Movie removed from bookmarks.</string>
</resources>
