<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="movieDetailsViewModel"
            type="com.runit.moviesmvvmmockup.ui.movie_details.MovieDetailsViewModel" />

        <variable
            name="movie"
            type="com.runit.moviesmvvmmockup.data.model.MovieModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"/>
        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />-->
                <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:visibility="@{movieDetailsViewModel.isLoading ? View.GONE : View.VISIBLE}"
                    tools:context="com.runit.movieDetailsViewModelsmvvmmockup.ui.movieDetailsViewModel_details.MovieDetailsActivity">

                    <ImageView
                        android:id="@+id/iv_movie_thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@color/image_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/background_white"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="16dp"
                            android:text="@{movie.displayTitle}"
                            android:textColor="@color/text_primary_black"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:text="Lorem Ipsum" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"
                                android:text="@string/movie_status"
                                android:textColor="@color/text_hint_black"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@{movie.status}"
                                android:textColor="@color/text_secondary_black"
                                android:textSize="12sp"
                                tools:text="Released" />
                        </LinearLayout>

                        <TextView
                            style="@style/Text_SectionLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overview_label" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@{movie.overview}"
                            android:textColor="@color/text_primary_black"
                            tools:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum " />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/divider"
                            android:layout_marginTop="16dp"
                            android:background="@color/divider_black" />
                    </LinearLayout>

                    <TextView
                        style="@style/Text_SectionLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_label" />

                    <LinearLayout
                        style="@style/Layout_InfoSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/Text_SmallLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/org_lang" />

                        <TextView
                            style="@style/Text_Info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{movie.originalLanguage}"
                            tools:text="Lorem Ipsum" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Layout_InfoSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/Text_SmallLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/runtime" />

                        <TextView
                            style="@style/Text_Info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(safeUnbox(movie.runtime))}"
                            tools:text="Lorem Ipsum" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Layout_InfoSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/Text_SmallLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/budget" />

                        <TextView
                            style="@style/Text_Info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(safeUnbox(movie.budget))}"
                            tools:text="Lorem Ipsum" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Layout_InfoSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/Text_SmallLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/revenue" />

                        <TextView
                            style="@style/Text_Info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(safeUnbox(movie.revenue))}"
                            tools:text="Lorem Ipsum" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vg_homepage"
                        style="@style/Layout_InfoSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:visibility="@{movie.homepage != null ? View.VISIBLE : View.GONE}">

                        <TextView
                            style="@style/Text_SmallLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/homepage" />

                        <TextView
                            style="@style/Text_Info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{movie.homepage}"
                            tools:text="Lorem Ipsum" />
                    </LinearLayout>
                </LinearLayout>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    android:layout_gravity="center"
                    android:visibility="@{movieDetailsViewModel.isLoading ? View.VISIBLE : View.GONE}" />

            </FrameLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>


</layout>